# cogment-lab

./: .editorconfig  .gitignore  .gitlab-ci.yml  .license.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.yml  proposal.yml
.github/workflows/: build.yml  docs-manual-versioning.yml  docs-versioning.yml
cogment_lab/: __init__.py  constants.py  core.py  process_manager.py  session_helpers.py  version.py
cogment_lab/actors/: __init__.py  configs.py  nn_actor.py  runner.py  simple.py
cogment_lab/cli/: __init__.py  actor.py  cli.py  download_cogment.py  env.py  launch.py
cogment_lab/envs/: __init__.py  configs.py  gymnasium.py  pettingzoo.py  runner.py
cogment_lab/envs/conversions/: __init__.py  observer.py  teacher.py
cogment_lab/humans/: __init__.py  actor.py  gradio_actor.py  gradio_runner.py  runner.py
cogment_lab/humans/static/: index.html
cogment_lab/protos/: cogment.yaml  data.proto  ndarray.proto  spaces.proto
cogment_lab/specs/: __init__.py  action_space.py  encode_rendered_frame.py  environment_specs.py  ndarray_serialization.py  observation_space.py  spaces_serialization.py
cogment_lab/utils/: __init__.py  coltra_utils.py  grpc.py  import_class.py  runners.py  trial_utils.py  yaml_utils.py
examples/: docs_example.py  lunar-interactive-bc.ipynb  lunarlander-teach.ipynb
examples/demos/active-lunar/: lunar-active.py  lunar-base.py  shared.py
examples/demos/pong-multiplayer/: train-ppo.ipynb  utils.py
examples/gymnasium/: bc-training.ipynb  gradio_as_actor.py  interactive.ipynb  interactive.py  local-training.ipynb  local-training.py  observe.ipynb  simple.py  training.ipynb
examples/models/lunar/: agent.pt  model.pt
examples/pettingzoo/: pz-atari-interactive.ipynb  pz-interactive.ipynb  pz-kaz.ipynb  pz-parallel-interactive.ipynb  pz-simple.py
scripts/: commons.sh  create_release_branch.sh  tag_release.sh
tests/: __init__.py  conftest.py  shared.py  test_core.py  test_frame_encode.py  test_gymnasium.py  test_pettingzoo.py  test_spaces_serialization.py  test_text_spaces.py
tutorials/: 1-setup.ipynb  2-basic-gym.ipynb  3-basic-pz.ipynb  4-conversions.ipynb
